Attempting a fix on Safari z-index issue

--- a/src/css/Parallax.css
+++ b/src/css/Parallax.css
@@ -53,8 +53,8 @@
 .para-container {
 	-webkit-transform-style: preserve-3d;
 	transform-style: preserve-3d;
-	-webkit-perspective: 1000px;
-	perspective: 1000px;
+	/* -webkit-perspective: 1000px; */
+	/* perspective: 1000px; */
 }
 
 .para-front,
